# gav

./: .gitignore  LICENSE  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
libaray/: build.gradle
libaray/script/: clean.sh  compile.sh
libaray/src/androidTest/java/com/jsq/gav/: ExampleInstrumentedTest.java
libaray/src/main/: AndroidManifest.xml
libaray/src/main/assets/shaders/: fragment_image_lookup.glsl
libaray/src/main/java/com/jsq/gav/: AudioComposer.java  AudioDecoder.java  AudioFeed.java  (+40 more)
libaray/src/main/jni/: CMakeLists.txt  ffmpeg_jni.cpp
libaray/src/main/res/values/: attr.xml
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/assets/hat/: obj.frag  obj.vert
sample/src/main/res/drawable/: ic_test.xml
sample/src/main/res/layout/: activity_add_gift_to_video.xml  activity_audio_browser.xml  activity_audio_record_sample.xml  activity_base.xml  activity_camera_preview.xml  activity_exo_player_test.xml  activity_extract_video_frames.xml  activity_light_gift_render.xml  activity_main.xml  activity_record.xml  activity_render_obj3d.xml  activity_sample_audio_player.xml  activity_take_picture.xml  activity_test_play.xml  activity_video_editer.xml  activity_video_effect.xml  activity_video_plater_test.xml  activity_video_split.xml  customactivityoncrash_default_error_activity.xml  item_audio_browser.xml  item_image_40dp.xml  item_lookup.xml  item_text_view.xml  item_video_image.xml  status_bar.xml
sample/src/main/res/raw/: bgs.aac
sample/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
(+69 files in other folders)
